--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,4 +2,14 @@
 layout: default
 ---
 
-{{ content }}
+<h2>{{ page.title }}</h2>
+
+{% assign website = site.data.website %}
+
+{% if website.show_post_meta %}
+  {% include post-meta.html %}
+{% endif %}
+
+<article>
+  {{ content }}
+</article>
