--- a/_sass/zebra-snooze/_variables.scss
+++ b/_sass/zebra-snooze/_variables.scss
@@ -7,7 +7,7 @@
 :root {
     --background: #fffffe;
     --paragraph: #2e2e2e;
-    --paragraph-text: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
+    --paragraph-text: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
     --paragraph-text-weight: 300;
     --link: #e45858;
     --stroke: #f2eef5;
